[gd_scene load_steps=4 format=3 uid="uid://mha5l8mhjmdr"]

[ext_resource type="Script" uid="uid://dtk15ytyj6q2u" path="res://scripts/SettingsMenu.gd" id="1_4swpp"]
[ext_resource type="FontFile" uid="uid://d4aco106sjx01" path="res://assets/fonts/Trajan Pro Regular/Trajan Pro Regular.ttf" id="1_ow6qp"]
[ext_resource type="Texture2D" uid="uid://kswxvcmx7tg0" path="res://assets/UI/SettingsMenuImage.png" id="2_i5f8d"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4swpp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -12.0
offset_right = 3456.0
offset_bottom = 2207.0
color = Color(0, 0, 0, 1)

[node name="SettingsTitle" type="Label" parent="."]
layout_mode = 2
offset_left = 1766.0
offset_top = 131.0
offset_right = 2731.0
offset_bottom = 331.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_ow6qp")
theme_override_font_sizes/font_size = 200
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = 3.0
offset_right = 1418.0
offset_bottom = 2209.0
texture = ExtResource("2_i5f8d")

[node name="AudioButton" type="Button" parent="."]
layout_mode = 0
offset_left = 2051.0
offset_top = 674.0
offset_right = 2486.0
offset_bottom = 819.0
theme_override_fonts/font = ExtResource("1_ow6qp")
theme_override_font_sizes/font_size = 125
text = "Audio"

[node name="GraphicsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1961.0
offset_top = 978.0
offset_right = 2615.0
offset_bottom = 1112.0
theme_override_fonts/font = ExtResource("1_ow6qp")
theme_override_font_sizes/font_size = 125
text = "Graphics"

[node name="ControlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1943.0
offset_top = 1263.0
offset_right = 2644.0
offset_bottom = 1397.0
theme_override_fonts/font = ExtResource("1_ow6qp")
theme_override_font_sizes/font_size = 125
text = "Controls"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 2135.0
offset_top = 1589.0
offset_right = 2478.0
offset_bottom = 1723.0
theme_override_fonts/font = ExtResource("1_ow6qp")
theme_override_font_sizes/font_size = 125
text = "Back"
